--- a/src/assets/css/blog.scss
+++ b/src/assets/css/blog.scss
@@ -9,7 +9,7 @@ $title-color: #291c48;
 $date-color: #54556b;
 $date-font-size: 12px;
 
-$excerpt-margin: 13px;
+$excerpt-margin: 14px;
 
 .blog-entries {
   display: grid;
@@ -28,7 +28,7 @@ $excerpt-margin: 13px;
 }
 
 .blog-entry {
-  margin-bottom: 13px;
+  margin-bottom: 14px;
 }
 
 .blog-entry-featured-image {
