--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -16,8 +16,11 @@
 }
 
 .header-wrapper {
+  align-items: center;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 92px auto;
   height: 100%;
-  padding-top: 44px;
 }
 
 .header-logo {
@@ -25,9 +28,8 @@
   $aspectRatio: 4.3125;
   $smallHeight: 48px;
   $smallWidth: $smallHeight * $aspectRatio;
-  $largeHeight: 64px;
-  $largeWidth: $largeHeight * $aspectRatio;
 
+  align-self: end;
   // Important: we use a relative path in order to ease the process of building
   // the WordPress theme, and we cannot use the `/assets/` prefix in this file
   // (and other Sass files).
@@ -40,18 +42,13 @@
   width: $smallWidth;
 
   @include respond-to(l) {
-    margin-left: 48px;
-    margin-top: 0;
+    margin: 0 0 0 48px;
   }
 }
 
 .header-title {
   color: $white;
-  display: flex;
-  flex-direction: column;
-  font-size: 44px;
-  height: 60vh;
-  justify-content: center;
+  font-size: 34px;
   line-height: 1.2;
   margin: 0 auto;
   max-width: 1100px;
@@ -59,13 +56,18 @@
   text-transform: uppercase;
   width: 70%;
 
+  @include respond-to(m-height) {
+    font-size: 44px;
+    width: 90%;
+  }
+
   @include respond-to(l) {
     font-size: 54px;
-    width: 90%;
   }
 
   @include respond-to(xxl) {
     font-size: 72px;
+    margin-top: -16px;
     width: 100%;
   }
 }
